readded fault tolerance tree. update bibliography.

--- a/fault_tolerance_report.bib
+++ b/fault_tolerance_report.bib
@@ -377,3 +377,36 @@
   organization = {IEEE}
 }
 
+@inproceedings{schroeder2009dram,
+	title={DRAM errors in the wild: a large-scale field study},
+	author={Schroeder, Bianca and Pinheiro, Eduardo and Weber, Wolf-Dietrich},
+	booktitle={ACM SIGMETRICS Performance Evaluation Review},
+	volume={37},
+	pages={193--204},
+	year={2009},
+	organization={ACM}
+}
+
+@article{costello2004error,
+	title={Error control coding},
+	author={Costello, D and Lin, Shu},
+	journal={New Jersey},
+	year={2004}
+}
+
+@phdthesis{grymel2013error,
+	title={Error control with binary cyclic codes},
+	author={Grymel, Martin-Thomas},
+	year={2013},
+	school={University of Manchester}
+}
+
+ @misc{ wiki:discretelogs,
+ 	author = "Wikipedia",
+ 	title = "Discrete logarithm --- Wikipedia{,} The Free Encyclopedia",
+ 	year = "2015",
+ 	url = "https://en.wikipedia.org/w/index.php?title=Discrete_logarithm&oldid=670886795",
+ 	note = "[Online; accessed 23-July-2015]"
+ }
+ 
+ 
